blockml/test/errors/11_report/e134/e134m.model
model: e134m
joins:
- from_view: e134_one
  as: a
